--- a/codex-rs/alicia-core/Cargo.toml
+++ b/codex-rs/alicia-core/Cargo.toml
@@ -21,6 +21,7 @@ serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
+toml = { workspace = true }
 
 [dev-dependencies]
 pretty_assertions = { workspace = true }
