ci: scope upstream workflows to openai owner

--- a/.github/workflows/bazel.yml
+++ b/.github/workflows/bazel.yml
@@ -17,6 +17,8 @@ concurrency:
   cancel-in-progress: ${{ github.ref_name != 'main' }}
 jobs:
   test:
+    # Experimental upstream matrix depends on paid/infrastructure-specific runners.
+    if: ${{ github.repository_owner == 'openai' }}
     strategy:
       fail-fast: false
       matrix:
