--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,8 @@ on:
 
 jobs:
   build-test:
+    # Upstream release-packaging checks are not part of the AlicIA fork CI loop.
+    if: ${{ github.repository_owner == 'openai' }}
     runs-on: ubuntu-latest
     timeout-minutes: 10
     env:
